--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :desc %><br>
     <%= f.text_area :desc %>
   </div>
+    <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title_wk %>
+  </div>
+  <div class="field">
+    <%= f.label :desc %><br>
+    <%= f.text_area :desc_wk %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
