--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,15 @@
   <%= @post.desc %>
 </p>
 
+<p>
+  <strong>Title_wk:</strong>
+  <%= @post.title_wk %>
+</p>
+
+<p>
+  <strong>Desc_wk:</strong>
+  <%= @post.desc_wk %>
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
